2003-10-07  Oliver Schwartz <Oliver.Schwartz@gmx.de>
	* backend/snapscan.h backend/snapscan.c backend/snapscan-option.c
	  Initial support for Epson Perfection 1670, minor bugfix
	  (#300247)

2003-10-07  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* acinclude.m4 aclocal.m4 configure configure
	  include/sane/config.h.in sanei/sanei_thread.c: More verbose help
	  messages for --enable-fork-process. Print message about pthread
	  support after all the tests. If libpthread isn't available, try if
	  libc supports pthreead_*. Use macro USE_PTHREAD to check if
	  threads are used in the code.
	* backend/Makefile.in: Added sanei_pthread.lo to list of object
	  files needed for preloading.

2003-10-07  Gerhard Jaeger <gerhard@gjaeger.de>

	* aclocal.m4 acinlcude.m4 configure configure.in: modified checks for
	  pthread support, added switch --enable-fork-process which toggles
	  between the usage of fork and pthread, set the default behaviour to
	  pthread usage on Darwin
	* include/sane/config.h: added the HAVE_LIBPTHRAD stuff
	* sanei/sanei_thread.c include/sane/sanei_thread.h: fixed compilation issue
	  on OS/2, added support for fork too, so that we can use sanei_thread
	  functions in any case.
	* backend/plustek.[ch]: changes due to the sanei_thread-lib work

2003-10-06  m. allan noah <anoah at pfeiffer dot edu>

	* backend/fujitsu.[ch]: Added support for color modes of fi-4x20C and
	  fi-4340C, maybe others as well.

2003-10-06  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp.c, backend/hp-option.h: Bug #300248 fixed
	  (correct "Negatives" in option description to "Negative")

2003-10-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/Makefile.in: Remove doxygen-sanei.conf in clean target.
	* sanei/sanei_pa4s2.c: Made some internal functions static.

2003-10-06  Thomas Soumarmon <thomas.soumarmon@cogitae.net>

	* backend/hp5400_*: fixed bug #300252 : added static to all non
	  SANE specific functions + changed #include <sane/..> into